fix: set `NODE_AUTH_TOKEN`

--- a/action.yml
+++ b/action.yml
@@ -16,6 +16,8 @@ inputs:
   ignore-scripts:
     description: install with ignore-scripts
     default: "true"
+  node-auth-token:
+    description: 'Optional env.NODE_AUTH_TOKEN value to registry-url'
 
 outputs:
   cache-hit-foundry:
@@ -50,5 +52,7 @@ runs:
       cache: ${{ inputs.cache }}
       registry-url: ${{ inputs.registry-url }}
       scope: ${{ inputs.scope }}
+    env:
+      NODE_AUTH_TOKEN: ${{ inputs.node-auth-token }}
   - run: ${{ inputs.cache }} install ${{ ((inputs.ignore-scripts == 'true') && '--ignore-scripts') || '' }}
     shell: bash
